<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/parallel"
		android:title="@string/parallelMode"
		android:icon="@drawable/menu_parallel" />
	<item android:id="@+id/find"
		android:title="@string/find"
		android:icon="@drawable/menu_find" />
	<item android:id="@+id/settings"
		android:title="@string/settings"
		android:icon="@drawable/menu_settings"/>
	<item android:id="@+id/document"
		android:title="@string/notes"
		android:icon="@drawable/menu_document" />
	<item android:id="@+id/download"
		android:title="@string/downloadBible"
		android:icon="@drawable/menu_import" />
	<item android:id="@+id/bookmark"
		android:title="@string/bookmarks_label" 
		android:icon="@drawable/menu_bookmark" />	
	<item android:id="@+id/history"
		android:title="@string/history" 
		android:icon="@drawable/menu_history" />
	<item android:id="@+id/downloadBookname"
		android:title="@string/downloadBookname"
		android:icon="@drawable/menu_import"/>
	<group
		android:id="@+id/contactAuthor"
		android:checkableBehavior="single"
		android:icon="@drawable/menu_send"
		android:title="Talk to PB">
		<item
			android:menuCategory="container"
			android:title="I'm feeling Angry"
			android:titleCondensed="Angry"
			android:visible="false" />
		<item
			android:menuCategory="container"
			android:title="I'm feeling broken hearted"
			android:titleCondensed="Brokenhearted"
			android:visible="false" />
		<item
			android:menuCategory="container"
			android:title="I'm feeling Confused"
			android:titleCondensed="Confused"
			android:visible="false" />
		<item
			android:menuCategory="container"
			android:title="I'm feeling depressed"
			android:titleCondensed="Depressed"
			android:visible="false" />
		<item
			android:menuCategory="container"
			android:title="I'm feeling exhausted"
			android:titleCondensed="Exhausted"
			android:visible="false" />
	</group>
	<item android:id="@+id/about"
		android:title="@string/about_label" 
		android:icon="@drawable/menu_about" />	
	<item android:id="@+id/help"
		android:title="@string/help" 
		android:icon="@drawable/menu_help" />
</menu>